# ChangeLog for app-mobilephone/obexd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/obexd/ChangeLog,v 1.17 2010/06/24 21:50:05 pacho Exp $

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> obexd-0.23.ebuild:
  stable amd64, bug 323459

*obexd-0.28 (18 Jun 2010)

  18 Jun 2010; Pacho Ramos <pacho@gentoo.org> +obexd-0.28.ebuild,
  metadata.xml:
  Version bump, also allow people to enable/disable usb and nokia-backup
  plugins.

  12 Jun 2010; Pacho Ramos <pacho@gentoo.org> obexd-0.27.ebuild:
  Add dependency on dev-libs/libical with USE='-eds'; thanks to gionnico for
  reporting bug 323615

*obexd-0.27 (11 Jun 2010)

  11 Jun 2010; Pacho Ramos <pacho@gentoo.org> +obexd-0.27.ebuild:
  Version bump with lots of bugfixes over 0.23.

  14 May 2010; Joseph Jezak <josejx@gentoo.org> obexd-0.21-r2.ebuild,
  obexd-0.23.ebuild:
  Marked ~ppc for bug #298502.

*obexd-0.23 (08 May 2010)

  08 May 2010; Pacho Ramos <pacho@gentoo.org> -obexd-0.18-r1.ebuild,
  -obexd-0.22.ebuild, +obexd-0.23.ebuild:
  Remove old. Version bump with the following changes:
  * Fix unneeded reset of session after a CONNECT.
  * Fix folder and object names with enabled auto accept.
  * Fix agent not being released after transfers complete.
  * Fix sending full packets to achieve higher throughput.
  * Add support for mimetype driver to phonebook access.
  * Add support for mimetype driver to SyncEvolution.

  26 Apr 2010; Christian Faulhammer <fauli@gentoo.org> obexd-0.21-r2.ebuild:
  stable x86, bug 314521

  13 Apr 2010; Markos Chandras <hwoarang@gentoo.org> obexd-0.21-r2.ebuild:
  Stable on amd64 wrt bug #314521

  10 Apr 2010; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Taking care of this with Tiziano.

*obexd-0.22 (15 Mar 2010)

  15 Mar 2010; Pacho Ramos <pacho@gentoo.org> +obexd-0.22.ebuild:
  Version bump with bugfixes

  20 Feb 2010; Hans de Graaff <graaff@gentoo.org> obexd-0.18-r1.ebuild:
  Fix typo.
