@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/obexd/Attic/obexd-0.28.ebuild,v 1.1 2010/06/18 12:42:45 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/obexd/Attic/obexd-0.28.ebuild,v 1.2 2010/06/26 14:13:27 nixnut Exp $
 
 EAPI="2"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.bluez.org/"
 SRC_URI="mirror://kernel/linux/bluetooth/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~ppc ~x86"
+KEYWORDS="~amd64 ~hppa ppc ~x86"
 IUSE="debug -eds nokia -server usb"
 
 RDEPEND="eds? ( gnome-extra/evolution-data-server )
