@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/gnome-bluetooth
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.75 2010/06/18 12:22:46 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.76 2010/06/26 14:13:58 nixnut Exp $
+
+  26 Jun 2010; <nixnut@gentoo.org> gnome-bluetooth-2.28.6.ebuild:
+  ppc stable #315275
 
 *gnome-bluetooth-2.30.0 (18 Jun 2010)
 
