@@ -1,6 +1,9 @@
 # ChangeLog for app-mobilephone/obexd
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/obexd/ChangeLog,v 1.17 2010/06/24 21:50:05 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/obexd/ChangeLog,v 1.18 2010/06/26 14:13:27 nixnut Exp $
+
+  26 Jun 2010; <nixnut@gentoo.org> obexd-0.28.ebuild:
+  ppc stable #315275
 
   24 Jun 2010; Pacho Ramos <pacho@gentoo.org> obexd-0.23.ebuild:
   stable amd64, bug 323459
